--- a/.github/workflows/scheduled_check_and_build.yml
+++ b/.github/workflows/scheduled_check_and_build.yml
@@ -2,9 +2,9 @@ name: scheduled-check-and-build
 
 # Run every 4 hours + allow manual trigger
 on:
-  schedule:
-    - cron: '0 */4 * * *'   # every 4 hours
-  workflow_dispatch:
+  # schedule:
+  #   - cron: '0 */4 * * *'   # every 4 hours
+  # workflow_dispatch:
 
 permissions:
   contents: write     # so the workflow can update the .last_patchright_release file
