--- a/.github/workflows/scheduled_check_and_build.yml
+++ b/.github/workflows/scheduled_check_and_build.yml
@@ -56,15 +56,15 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image to GHCR
-        if: ${{ steps.get_release.outputs.tag != steps.read_prev.outputs.prev }}
         uses: docker/build-push-action@v4
         with:
           context: .
           file: ./Dockerfile
           push: true
           tags: |
-            ghcr.io/xuis/${{ env.IMAGE_NAME }}:${{ steps.get_release.outputs.tag }}
-            ghcr.io/xuis/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ toLower(github.repository_owner) }}/patchright:${{ steps.get_release.outputs.tag }}
+            ghcr.io/${{ toLower(github.repository_owner) }}/patchright:latest
+
 
       - name: Update .last_patchright_release and push
         if: ${{ steps.get_release.outputs.tag != steps.read_prev.outputs.prev }}
